<resources>
    <string name="app_name">FA_Tilak_c0868747_Android</string>

    <string name="fragment_product_detail">Product Detail</string>
    <string name="fragment_add_product">Add New Product</string>
    <string name="fragment_update_product">Update Product</string>
    <string name="fragment_add_vendor">Add New Vendor</string>
    <string name="fragment_product_list">Product List</string>

    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_vendor">Choose Vendor</string>

    <string name="hint_search_product">Search by name or description</string>

    <string name="hint_vendor_lat">Latitude</string>
    <string name="hint_vendor_lng">Longitude</string>

    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_add_vendor">Add another vendor</string>

    <string name="add_vendor">Add a vendor</string>
    <string name="add_product">Add a product</string>

    <string name="item_option_edit">Edit Product</string>
    <string name="item_option_delete">Delete Product</string>

    <string name="title_add_option">Options</string>

    <string-array name="vendor_names">
        <item>Amazon</item>
        <item>Best Buy</item>
        <item>Walmart</item>
        <item>Tone Tai</item>
        <item>Canada Electronics</item>
        <item>Sunny Market</item>
    </string-array>

    <string name="google_map_api">AIzaSyBLrn9FoAG6EukNf1ftZquooY92axtUT8M</string>
</resources>