<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_graph"
    app:startDestination="@id/productListFragment">

    <fragment
        android:id="@+id/productListFragment"
        tools:layout="@layout/fragment_product_list"
        android:name="c0868747.tilak.finaltestandroid.ProductListFragment"
        android:label="@string/fragment_product_list" >
        <action
            android:id="@+id/action_productListFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_productListFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_productListFragment_to_addVendorFragment"
            app:destination="@id/addVendorFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        tools:layout="@layout/fragment_add_product"
        android:name="c0868747.tilak.finaltestandroid.AddProductFragment"
        android:label="@string/fragment_add_product" >
        <action
            android:id="@+id/action_addProductFragment_to_addVendorFragment"
            app:destination="@id/addVendorFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        tools:layout="@layout/fragment_product_detail"
        android:name="c0868747.tilak.finaltestandroid.ProductDetailFragment"
        android:label="@string/fragment_product_detail" >
        <action
            android:id="@+id/action_productDetailFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:popUpTo="@id/productListFragment"
            app:popUpToInclusive="false"/>
    </fragment>
    <fragment
        android:id="@+id/addVendorFragment"
        tools:layout="@layout/fragment_add_vendor"
        android:name="c0868747.tilak.finaltestandroid.AddVendorFragment"
        android:label="@string/fragment_add_vendor" />
</navigation>